<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#0000FF">

    <ImageView
        android:id="@+id/payoutTable"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/payoutImgDescription"
        android:src="@drawable/payout_table"
        android:layout_alignParentLeft="true" />

    <LinearLayout
        android:id="@+id/cards1"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@id/payoutTable"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:src="@drawable/red_back200"
            android:clickable="true"
            android:contentDescription="@string/card"
            android:focusable="true" />

        <ImageView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:clickable="true"
            android:src="@drawable/red_back200"
            android:contentDescription="@string/card"
            android:focusable="true" />

        <ImageView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:src="@drawable/red_back200"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/card" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cards2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@id/cards1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">
        <ImageView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:src="@drawable/red_back200"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/card" />

        <ImageView
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:src="@drawable/red_back200"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/card" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="75dp"
        android:layout_below="@id/cards2"
        android:weightSum="2">
        <Button
            android:id="@+id/dealBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="#00aa00"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/dealBtn"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/betBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="#00aa00"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/betBtn"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:id="@+id/cashHead"
                android:textSize="45sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="#FFD700"
                android:layout_height="0dp"
                android:text="@string/cashHead"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/cash"
                android:textSize="45sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:textColor="#FFD700"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2" >
            <TextView
                android:id="@+id/betHead"
                android:textSize="45sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:textColor="#FFD700"
                android:text="@string/betHead"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/bet"
                android:textSize="45sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:textColor="#FFD700"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>